feat(ms-7): resource-service AI layer, object storage, migrations, and infra hardening
## resource-service
- Add AI generation pipeline: StubAiResourceProvider (deterministic, 10 topic pools),
  OllamaAiResourceProvider (llama3.x via HTTP), OpenAiChatCompletionsResourceProvider (GPT-4o-mini)
  — provider selected at runtime via ai.generation.provider config
- Add AI services: AiResourceSummaryService, AiTranslationService, AiQualityScoreService,
  AiRelatedResourcesService, AiClassifyService, AiResourceGenerationService,
  AiResourceGenerationScheduler (cron-based nightly seed)
- Add AutoSeedService / AutoSeedController: static seed + force-reseed endpoints
- Add AiRateLimitFilter: token-bucket per-IP rate limiting on /api/resources/ai/** endpoints
- Add AiGenerationProperties: typed config for all AI provider settings
- Add MinioConfig + ObjectStorageService: file upload/download via Minio
- Add CacheErrorHandlerConfig: graceful Redis cache error handling (fallthrough, no crash)
- Add TransactionConfig: explicit transaction manager wiring
- Add WebMvcConfig: CORS and static resource configuration
- Add OpenApiConfig: Swagger/OpenAPI 3 spec with JWT bearer auth scheme
- Add DTOs: AiGenerateResourcesRequest/Response, AiResourceSummaryResponse,
  DuplicateCheckRequest, FileUploadResponse, ResourceStatsResponse
- Add Flyway migrations: V2 (category cascade fix), V3 (full-text search GIN indexes),
  V4 (soft-delete support)
- Add integration tests: ResourceIntegrationTest, ResourceControllerTest, ResourceServiceTest
- Update SecurityConfig: granular permitAll rules for AI and public GET endpoints
- Update ResourceController: AI summary/translate/quality/similar endpoints, stats, seed/generate
- Update ResourceService: bookmark logic, stats aggregation, soft-delete support
- Update pom.xml: Minio, OpenAPI, Flyway, retry, full-text search dependencies
- Update application.yml: full AI/Minio/CORS config with env-var overrides
- Remove KafkaProducerConfig (Kafka eventing mo